# GraphScholarV1

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  start.py
alembic/: env.py
app/: main.py
app/api/v1/: api.py
app/api/v1/endpoints/: auth.py  chat.py  dashboard.py  document.py  graph.py  learn.py
app/core/: config.py  constants.py  security.py
app/db/: base.py  session.py
app/models/: __init__.py  knowledge_node.py  learning_state.py  user.py
app/schemas/request/: auth.py  chat_message.py  graph_query.py  learning_feedback.py
app/schemas/response/: chat_response.py  graph_path.py  knowledge_node.py  learning_task.py  user.py
app/services/ai/agents/: extract_agent.py
app/services/ai/chains/: graph_rag_chain.py
app/services/ai/prompts/: extract_prompt.py  tutor_prompt.py
app/services/graph/: builder.py  client.py
app/services/learning/: fsrs_engine.py  scheduler.py
app/services/vector/: embedder.py  store.py
app/utils/: file_handler.py  logger.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: Layout.jsx  LoadingSpinner.jsx  Sidebar.jsx  StatCard.jsx  TopNav.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: Chat.jsx  Dashboard.jsx  Documents.jsx  KnowledgeGraph.jsx  Learning.jsx  Login.jsx
